# robot-soccer-kit

./: .gitignore  Makefile  README.md  app.py  backend.py  client.py  config.py  control.py  debug.sh  detection.py  field.py  game-controller.bat  index.html  jssl-gc  pyproject.toml  robot.html  robot.py  robots.py  run.bat  server.py  setup.py  team.html  video.py
.github/workflows/: run_uv.yml
app/: app.py  backend.py  camera-setting.html  config.json  control.py  detection.py  robot.py  robots.py  team.html
app/css/: app.css
app/markers/: marker.dxf
bluetooth/: .gitignore  filter  install-rtl-driver.sh  mount.sh  pair.sh  remove-all.sh
css/: app.css
docs/: coordinates-markers.md  install_linux.md  install_windows.md  linux.md  programming.md  robots.md
electronics/: BOM.xlsx  bom.csv  order.ods  process-bom.py  robot.brd  robot.csv  robot.pro  robot.sch
electronics/holo/: holo.brd  holo.sch
electronics/kicker/: 2021-08-27_09-29-00_Library.scr  DIO_PMEG6030EVPX.lbr  INDUCTOR.lbr  MT3608.lbr  SS34.lbr  kicker.brd  kicker.sch  nxp_60.lbr
electronics/rev0/: dimensions  robot.brd  robot.csv  robot.pro  robot.sch
electronics/rev1/: robot.brd  robot.sch
electronics/rev2/: BOM.xlsx  dimensions  robot.brd  robot.mnb  robot.mnt  robot.sch
electronics/rev3/: BOM.xlsx  robot.brd  robot.mnt  robot.sch
firmware/: .clang_complete  .gitignore  Makefile  TODO.md  bin_stream.cpp  bin_stream.h  bt.cpp  bt.h  build-targets.mk  buttons.cpp  buttons.h  buzzer.cpp  buzzer.h  charge.cpp  charge.h  dc.cpp  dc.h  distance.cpp  distance.h  hardware.h  imu.cpp  imu.h  infos.cpp  infos.h  js_utils.cpp  js_utils.h  kicker.cpp  kicker.h  leds.cpp  leds.h  load-preprograms.php  main.cpp  main.h  motion.cpp  motion.h  mux.cpp  mux.h  no_terminal.h  odometry.cpp  odometry.h  (+16 more)
firmware/assemble/: assemble.php
firmware/js/: CMakeLists.txt
firmware/math/: kinematics.py
firmware/preprograms/: 01_obstacle_search  02_exploration  03_line_follow
firmware/src/: alert.cpp  alert.h  bin_stream.cpp  bin_stream.h  buzzer.cpp  buzzer.h  com.cpp  com.h  com_Wifi.cpp  com_Wifi.h  com_bt.cpp  config.h  kicker.cpp  kicker.h  leds.cpp  leds.h  main.cpp  motors.cpp  motors.h  pinout.h  pwm_channels.cpp  pwm_channels.h  utils.h  (+3 more)
js/: app.js  robots.js  tabs.js  video.js
jssl/: backend.py  ball.csv  client.py  detection.py  field.py  field_dimensions.py  game_controller.py  index.html  log.csv  logger.py  place.py  robot.html  robot.py  robots.py  utils.py  video.py
markers/: marker.dxf
mechanics/: blocker.stl  coupler.stl  electronics_board.dxf  frame.dxf  kicker_tip_1.dxf  kicker_tip_1.step  kicker_tip_2.dxf  marker.dxf  motorbox_bottom.stl  motorbox_top.stl  wheel.stl  wheel1.stl  wheel2.stl
rsk/: __init__.py  api.py  backend.py  client.py  config.py  constants.py  control.py  detection.py  dumb_ia.py  dump_referee.py  em.py  field.py  field_dimensions.py  game_controller.py  kinematics.py  logger.py  packets.py  path_finder.py  path_finding.py  place.py  referee.py  robot.py  robot_serial.py  robot_wifi.py  robots.py  simulator.py  state.py  tasks.py  utils.py  video.py
ssl/: __init__.py  app.py  backend.py  client.py  config.py  control.py  detection.py  field.py  game_controller.py  place.py  robot.html  robot.py  robots.py  video.py
tools/: broadcast_recv.py  broadcast_send.py
(+39 files in other folders)
